--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
     <body>
         <h1>Kana's Website</h1>
         <p>テキストテキストテキストテキストテキストテキスト</p>
+        <p>テキストテキストテキストテキストテキストテキスト</p>
+        <p>テキストテキストテキストテキストテキストテキスト</p>
+        <h1>Kana's Website</h1>
+        <p>テキストテキストテキストテキストテキストテキスト</p>
+        <p>テキストテキストテキストテキストテキストテキスト</p>
+        <p>テキストテキストテキストテキストテキストテキスト</p>
     </body>
 </html>
