--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/css/style.css">
-        <title>かなのサイト</title>
+        <link rel="stylesheet" href="css/style.css">
+        <title>Cafe site</title>
     </head>
     <body>
-        <h1>Kana's Website</h1>
+        <h1>Cafe site</h1>
         <p>テキストテキストテキストテキストテキストテキスト</p>
         <p>テキストテキストテキストテキストテキストテキスト</p>
         <p>テキストテキストテキストテキストテキストテキスト</p>
-        <h1>Kana's Website</h1>
+        <h1>Contact</h1>
         <p>テキストテキストテキストテキストテキストテキスト</p>
         <p>テキストテキストテキストテキストテキストテキスト</p>
         <p>テキストテキストテキストテキストテキストテキスト</p>
